--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext {
         compose_version = '1.0.4'
+        hilt_version = '2.39'
     }
     repositories {
         google()
